# Federated-Learning-Personalization

./: .gitignore  README.md  pyproject.toml
fedpfl/data/: config.json
fedpfl/federated_learning/: constants.py  utils.py
fedpfl/federated_learning/clients/: base_client.py  fedbabu_client.py  fedper_client.py  fedrep_client.py  hybrid_avglg_client.py  hybrid_avglg_dual_client.py  hybrid_babulg_dual_client.py  hybrid_client.py  lgfedavg_client.py
fedpfl/federated_learning/example/: flower_client_cnn.py  flower_server_cnn.py  model_cnn.py
fedpfl/federated_learning/strategy/: aggregate_body_strategy.py  aggregate_full_strategy.py  aggregate_head_strategy.py  aggregate_hybrid_babulg_dual_strategy.py  initialization_strategy.py  store_history_strategy.py  store_metrics_strategy.py  store_selected_clients_strategy.py
fedpfl/model/: model_manager.py  model_split.py
