[tool.poetry]
name = "fedpfl"
version = "0.1.0"
description = "Personalized Federated Learning algorithms using flower"
authors = ["Daniel Lopes <daniel.francisco.lopes@outsystems.com>"]
packages = [ { include = "fedpfl" } ]

[tool.poetry.dependencies]
python = "~3.8.0"
flwr = "^0.17.0"
torch = "1.10.2"
torchvision = "0.11.3" # Used in the example for the CIFAR10 data set
tqdm = "~4.55.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"